--- a/src/main/resources/templates/baseLogin.html
+++ b/src/main/resources/templates/baseLogin.html
@@ -8,6 +8,7 @@
     
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/font-awesome.min.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
     
     <!-- JS -->
