--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,11 @@
                 {#if success != null}<div class="alert alert-success" role="alert">{success}</div>{/if}
                 <form method="POST" name="loginForm" enctype="multipart/form-data">
                     <div class="form-group">
+                        <i class="fa fa-user"></i>
                         <input type="text" name="username" id="username" class="form-control input-login" autofocus="autofocus" placeholder="Usuário"/>
                     </div>
                     <div class="form-group">
+                        <i class="fa fa-lock"></i>
                         <input type="password" name="password" id="password" class="form-control input-login" placeholder="Senha"/>
                     </div>
                     <div class="form-group">
