--- a/src/main/resources/templates/pageNotFound.html
+++ b/src/main/resources/templates/pageNotFound.html
@@ -8,13 +8,14 @@
     
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link type="text/css" rel="stylesheet" href="/assets/css/unpoly.min.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/lobibox.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
     
     <!-- JS -->
     <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/assets/js/unpoly.min.js"></script>
+    <script type="text/javascript" src="/assets/js/lobibox.js"></script>
 
 	<script type="text/javascript">
 		window.onload = verifyToken();
@@ -26,10 +27,10 @@
 		}
 	</script>
 	
-    <title>Erro 404 - Página não encontrada</title>
+    <title>{#insert title}Votação de Pautas{/}</title>
   </head>
 <body>
-    <div>
+	<div>
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container-header">
 				<div class="navbar-header">
@@ -67,20 +68,21 @@
 	
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="/users/perfil">Perfil</a></li>
-								<li><a href="#" onClick="sair()">Sair</a></li>
+								<li><a href="#" onClick="logoff()">Sair</a></li>
 							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-    </div>
-    
-    <div class="container">
-        <div class="container-error jumbotron alert-danger">
-            <h2>ERRO 404</h2>
-            <h3>Página não encontrada.</h3>
-        </div>
-    </div>
+	</div>
+	<div class="container">
+		<div class="container-error jumbotron alert-danger">
+			<h2>ERRO 404</h2>
+			<h3>Página não encontrada.</h3>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="/assets/js/scripts.js"></script>
 </body>
 </html>
