--- a/src/main/resources/templates/baseLogin.html
+++ b/src/main/resources/templates/baseLogin.html
@@ -14,10 +14,11 @@
     <!-- JS -->
     <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.flip.min.js"></script>
     
     <title>Votação de Pautas</title>
   </head>
-  <body>
+  <body class="bg-login">
       {#insert contents}{/}
   </body>
 </html>
