Modificado a tela de Login e Cadastro

--- a/src/main/resources/templates/baseLogin.html
+++ b/src/main/resources/templates/baseLogin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <!-- Required meta tags -->
+    <!-- Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="pragma" content="no-cache">
@@ -19,6 +19,8 @@
     <title>Votação de Pautas</title>
   </head>
   <body class="bg-login">
-      {#insert contents}{/}
+    {#insert contents}{/}
+    
+    <script type="text/javascript" src="/assets/js/login.js"></script>
   </body>
 </html>
