--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <!-- Required meta tags -->
+    <!-- Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="pragma" content="no-cache">
