Realizado ajuste visual para enquadramento da tela de login no disposito móvel

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <div class="logo-login">
         <img src="/assets/images/logo.png" width="200">
     </div>
-    <div id="card" class="panel panel-default">
+    <div id="card" class="panel">
         <div class="panel-body box-login front">
             <h3 class="title-login">Login</h3>
             {#if success != null}<div class="alert alert-success" role="alert">{success}</div>{/if}
