--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,11 +13,11 @@
                 <form method="POST" name="loginForm" id="loginForm" enctype="multipart/form-data">
                     <div class="form-group">
                         <i class="fa fa-user"></i>
-                        <input type="text" name="username" id="username" class="form-control input-login" autofocus="autofocus" placeholder="Usuário"/>
+                        <input type="text" name="username" id="user" class="form-control input-login" autofocus="autofocus" placeholder="Usuário"/>
                     </div>
                     <div class="form-group">
                         <i class="fa fa-lock"></i>
-                        <input type="password" name="password" id="password" class="form-control input-login" placeholder="Senha"/>
+                        <input type="password" name="password" id="pass" class="form-control input-login" placeholder="Senha"/>
                     </div>
                     <div class="form-group">
                         <input type="submit" id="login" value="Login" class="btn btn-login btn-lg btn-block"/>
@@ -25,7 +25,7 @@
                 </form>
                 <a href="#" id="flip-btn">Cadastrar</a>
                 {#if error != null}<div class="alert alert-danger" role="alert">{error}</div>{/if}
-                <div id="error"></div>
+                <div id="alert"></div>
                 <br />
                 <div class="text-center">
                     <div class="login-teste">Login de Teste:</div>
